# cannon-ai

./: .gitignore  Cargo.toml  direction_ais_10.json  shooting_ais_10.json
src/: entity.rs  main.rs  multi_threading.rs  neural_network.rs  ui.rs
