[package]
name = "cannon-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
na = { version = "0.33.2", package = "nalgebra", features = ["serde-serialize", "rand"] }
rand = "0.8.5"
raylib = { git = "https://github.com/raylib-rs/raylib-rs.git" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
typed_floats = "1.0.2"

[profile.release]
lto = true
